Update and improve docs and content.

--- a/content/specifications/v0.1.0.md
+++ b/content/specifications/v0.1.0.md
@@ -1,42 +1,24 @@
 +++
-title = "HUML specification"
+title = "HUML specification v0.1.0"
+description = "HUML language specification v0.1.0"
+
+[extra]
+toc = true
 +++
 
-# HUML specification
+# HUML specification v0.1.0
 
 HUML is a machine-readable markup language with a focus on readability by humans. It borrows YAML's visual appearance, but avoids its complexities, ambiguities, and dangerous footguns. It is very strict about indentation and spaces specifically to ensure consistent form across contexts for readability.
 
 HUML is tailored for configuration, documents, and datasets.
 
-## Motivation
-
-- HUML was primarily born out of the numerous frustrations with YAML, where one easy-to-miss, accidental indentation change can dangerously alter the semantics of a document.
-- JSON is universal, but lacks comments, does not have a strict form for consistent readability across contexts, has comma-related ambiguities, and bracket-matching woes which make human editing difficult.
-- Other popular markup languages such as TOML and HCL are configuration-oriented. NestedText is an interesting approach, but is too primitive to be suitable for wider use cases.
-- Of these, YAML is the one that comes closest to indicating structure and hierarchy visually.
-
-Ultimately, a new markup language is a subjective endeavor (it was even in 2001, as evidenced by YAML's original name, "*Yet Another ...*"). HUML looks like YAML, but borrows characteristics from many existing languages with the primary focus on enforcing human readability and consistency across contexts.
-
-But really, why? Why not!
-
-## Goals
-- Human readability and editability.
-- Visual comprehension of data structures and hierarchies.
-- Avoid footguns and ambiguities in syntax and data types.
-- As few ways of representing something as possible to ensure consistency.
-- Strictness for form and consistency.
-- Avoid the need for visual formatters.
-
----
-
-## Specification
 
 ### Encoding and basic structure
 
 * UTF-8 encoding.
 * Line breaks: Unix-style (`\n`).
 * Blank lines are ignored.
-* Optional version declaration at the top: `%HUML <version>` (e.g., `%HUML 0.1`). If this is not present, a parser is to apply the latest specification.
+* Optional version directive at the top: `%HUML <version>` (e.g., `%HUML v0.1.0`). If this is not present, a parser is to apply the latest version of the specification.
 
 ### Data types
 
@@ -102,10 +84,11 @@ key: "value"         # Inline comment with a lot of preceding spaces.
 
 - Keys are case-sensitive Unicode strings.
   - If alphanumeric `a-zA-Z0-9_-`, they do not need to be quoted.<br />e.g., `foo: 123`, `foo-bar: "yes"`
-  - If any other characters, including spaces, are present, keys must be quoted.<br />e.g., `foo: 123`, `"foo bar": 123, "ഭൂമി": "Earth"`
+  - If any other characters, including spaces, are present, keys must be quoted.<br />e.g., `foo: 123, "foo bar": 123, "ഭൂമി": "Earth"`
 - Scalar keys are denoted by the key followed by a single colon (`:`).
 - Vector keys are denoted by the key followed by double colons (`::`).
 - No spaces are allowed before the `:` or `::`, and they must be followed by exactly one space before the value.
+- The root of the document does not need a `:` or `::` at the top as the entire document's type is inferred from the first value that is encountered in the document.
 
 ------------
 
@@ -125,7 +108,7 @@ type: null
 In multi-line string blocks, no escaping is necessary. Characters are treated literally. Multi-line strings can be defined in two different ways. As the beginning and ending markers can be derived from the indentation, there is no need to escape the three double quotes or backticks themselves in the string content.
 
 #### 1) Preserve spaces: ******` ``` `******
-The content block must be indented by one level (2 spaces) relative to the key. These initial 2 spaces on each line are stripped. All other preceding and all trailing spaces are preserved as content. The opening indicator ******` ``` `****** must be after the indicator `:` separated by exactly one space. The closing indicator must be at the indentation level of the key.
+The content block must be indented by one level (2 spaces) relative to the key. These initial 2 spaces on each line is the minimum required indentation and is not considered as spaces. All other preceding and all trailing spaces are preserved as content. The opening indicator ******` ``` `****** must be after the indicator `:` separated by exactly one space. The closing indicator must be at the indentation level of the key.
 
 ````huml
 description: ```
@@ -145,7 +128,7 @@ Line 1
         All spaces are preserved.
 ```
 
-#### 2) Ignore preceding and trailing spaces: ******`"""`******
+#### 2) Strip preceding and trailing spaces: ******`"""`******
 The content block must be indented by one level (2 spaces) relative to the key. All leading and trailing whitespace on each line of content is stripped. The opening indicator ******`"""`****** must be after the indicator `:` separated by exactly one space. The closing indicator must be at the indentation level of the key.
 
 
@@ -301,36 +284,55 @@ foo:
   - 3
 ```
 
-## Key-less documents
+## Document root
 
-An empty HUML document is evaluated as an empty dict by default. However, a document does not need to be a dict at the root. Similar to JSON, it can be a key-less scalar or a list.
+An empty HUML document (ignoring comments) is by default considered undefined. Since the root of the document does not have a key, an explicit indicator `:` or `::` is not required. The document's type is inferred dynamically from the first encounter of vector or scalar values. Any subsequent type or value that appears throws a parser error, unless they are child elements of a vector.
 
+Various scenarios are illustrated below.
+
+The document is evaluated to the boolean `true`. No subsequent keys, values, or data types are permitted.
 ```huml
 true
 ```
 
+The document is evaluated to the string `"Hello, world"`. No subsequent keys, values, or data types are permitted.
 ```huml
 "Hello, world"
 ```
 
+The document is evaluated to the list `[1, 2, "three"]`. Note that there is no `::` indicator at the root as the vector value is directly at the root of the document without a key. No subsequent keys, values, or data types are permitted outside of the list elements. Since this is an inline list, no nesting is permitted either.
 ```huml
-:: 1, 2, 3
+1, 2, "three"
 ```
 
+The document is evaluated to the list `[1, 2, "three"]`. Note that there is no `::` indicator at the root as the vector value is directly at the root of the document without a key. No subsequent keys, values, or data types are permitted outside of the list elements.
 ```huml
-::
-  - "first"
-  - "second"
+- 1
+- 2
+- "three"
 ```
 
+The document is evaluated to the dict `{"foo": 1, "bar": "two"}`. Note that there is no `::` indicator at the root as the vector value is directly at the root of the document without a parent key. Since this is an inline dict, no further nesting is permitted.
 ```huml
-# Special indicator for an empty dict.
-:: {}
+foo: 1, bar: "two"
 ```
 
+The document is evaluated to the dict `{"foo": 1, "bar": "two", "baz": {"foo": "child"}}`. Note that there is no `::` indicator at the root as the vector value is directly at the root of the document without a key. Since the whole document in itself is now a dict, new keys and arbitrary nested types under them are permitted.
 ```huml
-# Special indicator for an empty list.
-:: []
+foo: 1
+bar: "two"
+baz::
+  foo: "child"
+```
+
+The document is evaluated to the empty dict `{}` (special indicator). No subsequent keys, values, or data types are permitted.
+```huml
+{}
+```
+
+The document is evaluated to the empty list `[]` (special indicator). No subsequent keys, values, or data types are permitted.
+```huml
+[]
 ```
 
 ---
@@ -338,8 +340,6 @@ true
 ## Kitchensink example
 
 ```huml
-%HUML 0.1 # Document version declaration
-
 # This is the root dictionary for our application configuration.
 application_config::
   application_name: "HUML Showcase Suite"
