Document the intention of inline vectors clear in the specs.

--- a/content/specifications/v0.1.0.md
+++ b/content/specifications/v0.1.0.md
@@ -157,7 +157,7 @@ Vectors are denoted by double colons (`::`) and can be lists (arrays) or dicts (
 
 #### Lists
 
-* **Inline:** Comma-separated without trailing commas. Inline list items can only be scalar values and cannot contain vectors or nesting.
+* **Inline:** Comma-separated without trailing commas. Inline list items can only be scalar values and cannot contain vectors or nesting. They are meant to be a readability shortcut for small lists.
 * **Multi-line:** A hyphen `-` denotes a list item, indented by 2 spaces relative to its parent. Multi-line lists can be nested and can contain vectors.
 * **Empty list:** A vector can be marked as an empty list with the special value `[]`.
 
@@ -193,7 +193,7 @@ empty_list:: []
 
 #### Dicts
 
-* **Inline:** Keys inside a dict are `key: value` pairs, comma-separated without trailing commas. Inline dicts can only contain scalar key-values and cannot contain vectors or nesting.
+* **Inline:** Keys inside a dict are `key: value` pairs, comma-separated without trailing commas. Inline dicts can only contain scalar key-values and cannot contain vectors or nesting. They are meant to be a readability shortcut for small dictionaries.
 * **Multi-line:** Keys inside a dict are `key: value` on a line indented by 2 spaces relative to its parent. Multi-line dicts can be nested and can contain vectors.
 * **Empty dict:** A vector can be marked as an empty dict with the special value `{}`.
 
