Improve spec doc of characters allowed in ekys.

--- a/content/specifications/v0.1.0.md
+++ b/content/specifications/v0.1.0.md
@@ -83,8 +83,8 @@ key: "value"         # Inline comment with a lot of preceding spaces.
 ### Keys and values
 
 - Keys are case-sensitive Unicode strings.
-  - If alphanumeric `a-zA-Z0-9_-`, they do not need to be quoted.<br />e.g., `foo: 123`, `foo-bar: "yes"`
-  - If any other characters, including spaces, are present, keys must be quoted.<br />e.g., `foo: 123, "foo bar": 123, "ഭൂമി": "Earth"`
+  - If (alphanumeric-underscore-dash) `a-zA-Z0-9_-` and starting with an alphabet, the key does not need to be quoted.<br />e.g., `foo: 123, foo-bar: "yes", foo1: true`
+  - If any other characters, including spaces, are present, keys must be quoted.<br />e.g., `"1foo": 123, "foo bar": 123, "ഭൂമി": "Earth"`
 - Scalar keys are denoted by the key followed by a single colon (`:`).
 - Vector keys are denoted by the key followed by double colons (`::`).
 - No spaces are allowed before the `:` or `::`, and they must be followed by exactly one space before the value.
