Fix formatting and make string rules clearer in the doc.

--- a/content/specifications/v0.1.0.md
+++ b/content/specifications/v0.1.0.md
@@ -13,52 +13,52 @@ HUML is a machine-readable markup language with a focus on readability by humans
 HUML is tailored for configuration, documents, and datasets.
 
 
-### Encoding and basic structure
+## Encoding and basic structure
 
 * UTF-8 encoding.
 * Line breaks: Unix-style (`\n`).
 * Blank lines are ignored.
 * Optional version directive at the top: `%HUML <version>` (e.g., `%HUML v0.1.0`). If this is not present, a parser is to apply the latest version of the specification.
 
-### Data types
+## Data types
 
 HUML supports scalar (string, number, bool, null) and vector (list, dict) data types.
 
-| Type | Description | Example |
-|------|-------------|----------|
-| **String** | Always quoted. | `"foo"`, `"Hello World"` |
-| | Single-line strings: all `"` and `\` must be escaped. | `\"`, `\\` |
-| | Multi-line strings are wrapped in ```` (three backticks) to preserve spaces or `"""` (three double quotes) to strip them. | |
-| | Characters inside a multi-line string do not need to be escaped, and `\n`, `\t` are treated literally. | |
-| **Number** | **Integer** | `123`, `+123`, `-123` |
-| | **Float** (64-bit, IEEE 754 double-precision floating-point) | `3.14`, `-0.5` |
-| | **Special values**. The special numerical values are unquoted. | `nan`, `inf`, `+inf`, `-inf` |
-| | *Notations* | |
-| | **Exponent**, denoted by a lowercase `e` | `1e10`, `6.022e23` |
-| | **Hex**, begins with `0x` | `0x1A`, `0xCAFE` |
-| | **Octal**, begins with `0o` | `0o12`, `0o755` |
-| | **Binary**, begins with `0b` | `0b1010`, `0b11011001` |
-| | Numbers can have arbitrary underscore characters for readability, which are simply ignored while parsing. | `1_00_0000` |
-| **Boolean** | True or false values. | `true`, `false` |
-| **Null** | Null value. | `null` |
-| **List** | Array of arbitrary data types. | `1, 2, "three"` |
-|          | Definition can be inline or multi-line. |  |
-|          | Multi-line items are prefixed with a `-`, like a bullet point list. |  |
-|          | `[]` is a special signifier used to denote an empty list, e.g., `items:: []`. | `[]` |
-| **Dict** | Unordered map of key-value pairs. Keys are strings and values can be of arbitrary data types. | `hello: "world", num: 123` |
-|          | Definition can be inline or multi-line. | |
-|          | Duplicate keys inside a dict are not allowed. | |
-|          | `{}` is a special signifier used to denote an empty dict, e.g., `items:: {}`. | `{}` |
+| Type        | Description                                                                                                                         | Example                                                   |
+| ----------- | ----------------------------------------------------------------------------------------------------------------------------------- | --------------------------------------------------------- |
+| **String**  | Only canonical (decoded) representation of Unicode strings. No `\u` or `\U` or any other escaped or encoded representations.        | Allowed: `"Hello 🌏"`<br>Not allowed: `"Hello \u1F30F"`    |
+|             | **Single-line string**: Always quoted with double quotes. `"` and `\` must be escaped.                                              | `"foo"`, `"Hello World"`, `"Hi \"all\""`, `"Back\\Slash"` |
+|             | **Multi-line string**: Wrapped in ```` (three backticks) to preserve spaces or `"""` (three double quotes) to strip them.           |                                                           |
+|             | Characters inside a multi-line string do not need to be escaped. Escape sequences with backslashes like `\n` are treated literally. |                                                           |
+| **Number**  | **Integer**                                                                                                                         | `123`, `+123`, `-123`                                     |
+|             | **Float** (64-bit, IEEE 754 double-precision floating-point)                                                                        | `3.14`, `-0.5`                                            |
+|             | **Special values**. The special numerical values are unquoted.                                                                      | `nan`, `inf`, `+inf`, `-inf`                              |
+|             | *Notations*                                                                                                                         |                                                           |
+|             | **Exponent**, denoted by a lowercase `e`                                                                                            | `1e10`, `6.022e23`                                        |
+|             | **Hex**, begins with `0x`                                                                                                           | `0x1A`, `0xCAFE`                                          |
+|             | **Octal**, begins with `0o`                                                                                                         | `0o12`, `0o755`                                           |
+|             | **Binary**, begins with `0b`                                                                                                        | `0b1010`, `0b11011001`                                    |
+|             | Numbers can have arbitrary underscore characters for readability, which are simply ignored while parsing.                           | `1_00_0000`                                               |
+| **Boolean** | True or false values.                                                                                                               | `true`, `false`                                           |
+| **Null**    | Null value.                                                                                                                         | `null`                                                    |
+| **List**    | Array of arbitrary data types.                                                                                                      | `1, 2, "three"`                                           |
+|             | Definition can be inline or multi-line.                                                                                             |                                                           |
+|             | Multi-line items are prefixed with a `-`, like a bullet point list.                                                                 |                                                           |
+|             | `[]` is a special signifier used to denote an empty list, e.g., `items:: []`.                                                       | `[]`                                                      |
+| **Dict**    | Unordered map of key-value pairs. Keys are strings and values can be of arbitrary data types.                                       | `hello: "world", num: 123`                                |
+|             | Definition can be inline or multi-line.                                                                                             |                                                           |
+|             | Duplicate keys inside a dict are not allowed.                                                                                       |                                                           |
+|             | `{}` is a special signifier used to denote an empty dict, e.g., `items:: {}`.                                                       | `{}`                                                      |
 
 ------------
 
-### Indentation
+## Indentation
 
 * Strictly 2 spaces per indentation level. For multi-line list and dict vector definitions, indentation represents hierarchy.
 
 ------------
 
-### Spaces
+## Spaces
 The presence of space characters is strictly controlled.
 * Trailing spaces are not allowed on any line, including empty lines and comment-only lines, except for content within multi-line strings, where they are treated as content.
 * The comment marker `#` must be immediately followed by one space before the comment contents, e.g., `# Comment` and not `#Comment`.
@@ -68,7 +68,7 @@ The presence of space characters is strictly controlled.
 
 ------------
 
-### Comments
+## Comments
 
 * Lines beginning with `#` are comments. Comments can have preceding spaces, but not trailing spaces.
 * After `#`, there must be at least one space before any other character.
@@ -80,7 +80,7 @@ key: "value"         # Inline comment with a lot of preceding spaces.
 
 ------------
 
-### Keys and values
+## Keys and values
 
 - Keys are case-sensitive Unicode strings.
   - If (alphanumeric-underscore-dash) `a-zA-Z0-9_-` and starting with an alphabet, the key does not need to be quoted.<br />e.g., `foo: 123, foo-bar: "yes", foo1: true`
@@ -92,7 +92,7 @@ key: "value"         # Inline comment with a lot of preceding spaces.
 
 ------------
 
-### Scalars
+## Scalars
 
 Scalars (string, number, boolean, null) are denoted by a single colon (`:`).
 
@@ -103,11 +103,27 @@ boolean: true
 type: null
 ```
 
+### Strings
+Strings can only be represented in their canonical (decoded) form. That is, encoded representations such as `\u` and `\U` are not permitted to ensure consitency and readability.
+
+### Single-line strings
+Single-line strings may include the following formatting control characters using C-style escape notation with backslashes.
+
+| Escape | Description     |
+| :----- | :-------------- |
+| `\b`   | Backspace       |
+| `\f`   | Form feed       |
+| `\n`   | Newline (LF)    |
+| `\r`   | Carriage return |
+| `\t`   | Horizontal tab  |
+| `\v`   | Vertical tab    |
+
+
 ### Multi-line strings
 
-In multi-line string blocks, no escaping is necessary. Characters are treated literally. Multi-line strings can be defined in two different ways. As the beginning and ending markers can be derived from the indentation, there is no need to escape the three double quotes or backticks themselves in the string content.
+In multi-line string blocks, no escaping is necessary. Characters are treated literally. As the beginning and ending markers can be derived from the indentation, there is no need to escape the three double quotes or backticks themselves in the string content.
 
-#### 1) Preserve spaces: ******` ``` `******
+#### Preserve spaces: ******` ``` `******
 The content block must be indented by one level (2 spaces) relative to the key. These initial 2 spaces on each line is the minimum required indentation and is not considered as spaces. All other preceding and all trailing spaces are preserved as content. The opening indicator ******` ``` `****** must be after the indicator `:` separated by exactly one space. The closing indicator must be at the indentation level of the key.
 
 ````huml
@@ -128,7 +144,7 @@ Line 1
         All spaces are preserved.
 ```
 
-#### 2) Strip preceding and trailing spaces: ******`"""`******
+#### Strip spaces: ******`"""`******
 The content block must be indented by one level (2 spaces) relative to the key. All leading and trailing whitespace on each line of content is stripped. The opening indicator ******`"""`****** must be after the indicator `:` separated by exactly one space. The closing indicator must be at the indentation level of the key.
 
 
@@ -151,11 +167,11 @@ All spaces are ignored.
 
 ------------
 
-### Vectors
+## Vectors
 
 Vectors are denoted by double colons (`::`) and can be lists (arrays) or dicts (unordered key-value maps or dictionaries).
 
-#### Lists
+### Lists
 
 * **Inline:** Comma-separated without trailing commas. Inline list items can only be scalar values and cannot contain vectors or nesting. They are meant to be a readability shortcut for small lists.
 * **Multi-line:** A hyphen `-` denotes a list item, indented by 2 spaces relative to its parent. Multi-line lists can be nested and can contain vectors.
@@ -191,7 +207,7 @@ list_of_dicts::
 empty_list:: []
 ```
 
-#### Dicts
+### Dicts
 
 * **Inline:** Keys inside a dict are `key: value` pairs, comma-separated without trailing commas. Inline dicts can only contain scalar key-values and cannot contain vectors or nesting. They are meant to be a readability shortcut for small dictionaries.
 * **Multi-line:** Keys inside a dict are `key: value` on a line indented by 2 spaces relative to its parent. Multi-line dicts can be nested and can contain vectors.
