Fixed typo with backticks

--- a/content/specifications/v0.1.0.md
+++ b/content/specifications/v0.1.0.md
@@ -28,7 +28,7 @@ HUML supports scalar (string, number, bool, null) and vector (list, dict) data t
 | ----------- | ----------------------------------------------------------------------------------------------------------------------------------- | --------------------------------------------------------- |
 | **String**  | Only canonical (decoded) representation of Unicode strings. No `\u` or `\U` or any other escaped or encoded representations.        | Allowed: `"Hello 🌏"`<br>Not allowed: `"Hello \u1F30F"`    |
 |             | **Single-line string**: Always quoted with double quotes. `"` and `\` must be escaped.                                              | `"foo"`, `"Hello World"`, `"Hi \"all\""`, `"Back\\Slash"` |
-|             | **Multi-line string**: Wrapped in ```` (three backticks) to preserve spaces or `"""` (three double quotes) to strip them.           |                                                           |
+|             | **Multi-line string**: Wrapped in ``` (three backticks) to preserve spaces or `"""` (three double quotes) to strip them.           |                                                           |
 |             | Characters inside a multi-line string do not need to be escaped. Escape sequences with backslashes like `\n` are treated literally. |                                                           |
 | **Number**  | **Integer**                                                                                                                         | `123`, `+123`, `-123`                                     |
 |             | **Float** (64-bit, IEEE 754 double-precision floating-point)                                                                        | `3.14`, `-0.5`                                            |
