add bnf grammar to v0.1 spec

--- a/content/specifications/v0.1.0.md
+++ b/content/specifications/v0.1.0.md
@@ -466,5 +466,154 @@ user_preferences::
   theme: "solarized_dark"
   font_size_pt: 12
   show_tooltips: true
-
 ```
+
+---
+
+# Grammar
+
+This follows an EBNF style notation.
+- Lowercase names (e.g. `huml_document`) are rules that are described in the
+BNF as a sequence of tokens.
+- Uppercase names (e.g. `STRING` or `INDENT`) are tokens that are produced by
+rules as described in the [tokenizer](#tokenizer) section.
+- `|` (e.g. `alpha | digit`) denotes alternatives (OR).
+- `*` (e.g. `rule*`) denotes zero or more repetitions of the preceding element.
+- `+` (e.g. `rule+`) denotes one or more repetitions of the preceding element.
+- `?` (e.g. `rule?`) denotes an optional element (zero or one occurence).
+- `[...]` describes a range of characters. For example, `['a'..'z']` describes
+the lowercase Latin letters a to z.
+- Single characters are enclosed in single quotes `'` and strings are enclosed
+in double quotes `"`.
+
+```ebnf
+huml_document = (NEWLINE? huml_version NEWLINE)? NEWLINE? root_value NEWLINE?;
+
+huml_version = "%HUML " version_string;
+version_string = ( alpha | digit | '.' | '_' | '-' )+;
+
+alpha = ['a'..'z'] | ['A'..'Z'];
+digit = ['0'..'9'];
+
+(* root value needs disambiguating between inline & multiline vectors *)
+root_value =
+    scalar_key_value ( ", " scalar_key_value )+  (* inline dict, not multiline *)
+  | scalar ( ", " scalar )+                      (* inline list, not scalar *)
+  | multiline_vector
+  | scalar
+  | "[]"
+  | "{}"
+  ;
+
+scalar =
+    STRING
+  | FLOAT
+  | INT
+  | bool
+  | null
+  ;
+
+bool = "true" | "false";
+null = "null";
+
+(* vectors *)
+vector = inline_vector | multiline_vector;
+
+inline_vector = inline_list | inline_dict;
+
+multiline_vector = multiline_list | multiline_dict;
+
+(* lists *)
+
+inline_list = "[]" | scalar ( ", " scalar )*;
+
+multiline_list = multiline_list_item multiline_list_items;
+
+multiline_list_items =
+    NEWLINE multiline_list_item multiline_list_items
+  | NEWLINE?
+  ;
+
+multiline_list_item =
+    "- " scalar
+  | "- " INLINE_VECTOR_START inline_vector
+  | "- " MULTILINE_VECTOR_START NEWLINE INDENT multiline_vector DEDENT
+  ;
+
+(* dicts *)
+
+inline_dict = "{}" | scalar_key_value ( ", " scalar_key_value )*;
+
+multiline_dict = multiline_dict_item multiline_dict_items;
+
+multiline_dict_items =
+    NEWLINE multiline_dict_item multiline_dict_items
+  | NEWLINE?
+  ;
+
+multiline_dict_item =
+    scalar_key_value
+  | dict_key INLINE_VECTOR_START inline_vector
+  | dict_key MULTILINE_VECTOR_START NEWLINE INDENT multiline_vector DEDENT
+  ;
+
+scalar_key_value = dict_key ": " scalar;
+dict_key = simple_key | STRING;
+simple_key = alpha ( alpha | digit | '_' | '-' )*;
+```
+
+## Tokenizer
+
+`curr_ind` is the current indentation level (in spaces).
+`curr_ind += 2` at each `INDENT` and `curr_ind -= 2` at each `DEDENT`.
+
+```ebnf
+(* start of line handling: *)
+| '\n', whitespace*, comment                -> skip & continue
+| '\n', ' '{curr_ind}                       -> NEWLINE
+| '\n', ' '{curr_ind+2}                     -> [NEWLINE, INDENT]
+| '\n', ' '{< curr_ind}                     -> [DEDENT (curr_ind - len(m)) / 2 times, NEWLINE]
+
+(* end of line handling: *)
+| whitespace*, comment                      -> skip & continue
+
+(* dict handling: *)
+| "::" (whitespace*, comment)?, '\n'        -> [MULTILINE_VECTOR_START, NEWLINE]
+| ":: "                                     -> INLINE_VECTOR_START
+
+(* integers *)
+| ('+'|'-')?, ['0'-'9' '_']+                -> INT(int)             # from decimal
+| ('+'|'-')?, "0x",
+    ['0'-'9' 'a'-'f' 'A'-'F' '_']+          -> INT(int)             # from hex
+| ('+'|'-')?, "0o",
+    ['0'-'7' '_']+                          -> INT(int)             # from octal
+| ('+'|'-')?, "0b", ['0'-'1' '_']+          -> INT(int)             # from binary
+
+(* float *)
+| "nan"                                     -> FLOAT(float)         # from nan
+| ('+'|'-')?, "inf"                         -> FLOAT(float)         # from inf
+| int, '.', ['0'-'9' '_'],
+    (('e'|'E'), int)?                       -> FLOAT(float)
+| int, (('e'|'E') int)                      -> FLOAT(float)
+
+(* strings *)
+| '"' ("\\\"" | [^ '\n' '"' ])* '"'         -> STRING(string)       # additionally, handle escape sequences
+| "\"\"\"", (whitespace*, comment)?, '\n'
+    | whitespace{curr_ind} "\"\"\""         -> STRING(string)
+    | whitespace{curr_ind+2}
+        (s:[^ '\n']*) '\n'                  -> add s to string
+    | (s:[^ '\n']*) '\n'                    -> add s to string
+| "```", (whitespace*, comment?), '\n'
+    | whitespace{curr_ind}, "```"           -> STRING(string)
+    | whitespace{curr_ind+2}, (s:[^ '\n']*) -> add s to string
+    | s:[^ '\n']*                           -> add s to string
+
+comment = "# ", [^ '\n']*
+whitespace = ' '
+```
+
+Escape sequences:
+- `\\` -> `\`
+- `\/` -> `/`
+- `\n` -> newline
+- `\r` | `\f` | `\t` -> corresponding control characters
