add escape sequences documentation for single line strings

--- a/content/specifications/v0.1.0.md
+++ b/content/specifications/v0.1.0.md
@@ -614,6 +614,5 @@ whitespace = ' '
 
 Escape sequences:
 - `\\` -> `\`
-- `\/` -> `/`
-- `\n` -> newline
-- `\r` | `\f` | `\t` -> corresponding control characters
+- `\"` -> `"`
+- `\b` | `\n` | `\r` | `\f` | `\t` | `\v` -> [corresponding control characters](#Single-line-strings)
