Better syntax highlighting for tokenizer, whitespace+ before comment

--- a/content/specifications/v0.1.0.md
+++ b/content/specifications/v0.1.0.md
@@ -567,18 +567,18 @@ simple_key = alpha ( alpha | digit | '_' | '-' )*;
 `curr_ind` is the current indentation level (in spaces).
 `curr_ind += 2` at each `INDENT` and `curr_ind -= 2` at each `DEDENT`.
 
-```ebnf
+```ocaml
 (* start of line handling: *)
-| '\n', whitespace*, comment                -> skip & continue
+| '\n', whitespace*, comment                -> ignore
 | '\n', ' '{curr_ind}                       -> NEWLINE
 | '\n', ' '{curr_ind+2}                     -> [NEWLINE, INDENT]
 | '\n', ' '{< curr_ind}                     -> [DEDENT (curr_ind - len(m)) / 2 times, NEWLINE]
 
 (* end of line handling: *)
-| whitespace*, comment                      -> skip & continue
+| whitespace+, comment                      -> ignore
 
 (* dict handling: *)
-| "::" (whitespace*, comment)?, '\n'        -> [MULTILINE_VECTOR_START, NEWLINE]
+| "::" (whitespace+, comment)?, '\n'        -> [MULTILINE_VECTOR_START, NEWLINE]
 | ":: "                                     -> INLINE_VECTOR_START
 
 (* integers *)
@@ -598,12 +598,12 @@ simple_key = alpha ( alpha | digit | '_' | '-' )*;
 
 (* strings *)
 | '"' ("\\\"" | [^ '\n' '"' ])* '"'         -> STRING(string)       # additionally, handle escape sequences
-| "\"\"\"", (whitespace*, comment)?, '\n'
+| "\"\"\"", (whitespace+, comment)?, '\n'
     | whitespace{curr_ind} "\"\"\""         -> STRING(string)
     | whitespace{curr_ind+2}
         (s:[^ '\n']*) '\n'                  -> add s to string
     | (s:[^ '\n']*) '\n'                    -> add s to string
-| "```", (whitespace*, comment?), '\n'
+| "```", (whitespace+, comment)?, '\n'
     | whitespace{curr_ind}, "```"           -> STRING(string)
     | whitespace{curr_ind+2}, (s:[^ '\n']*) -> add s to string
     | s:[^ '\n']*                           -> add s to string
@@ -612,7 +612,7 @@ comment = "# ", [^ '\n']*
 whitespace = ' '
 ```
 
-Escape sequences:
+### Escape sequences
 - `\\` -> `\`
 - `\"` -> `"`
 - `\b` | `\n` | `\r` | `\f` | `\t` | `\v` -> [corresponding control characters](#Single-line-strings)
