fix: float & multi-line string grammar

--- a/content/specifications/v0.1.0.md
+++ b/content/specifications/v0.1.0.md
@@ -582,34 +582,31 @@ simple_key = alpha ( alpha | digit | '_' | '-' )*;
 | ":: "                                     -> INLINE_VECTOR_START
 
 (* integers *)
-| ('+'|'-')?, ['0'-'9' '_']+                -> INT(int)             # from decimal
+| ('+'|'-')?, digit+, exp?                  -> INT(int)             # decimal
 | ('+'|'-')?, "0x",
-    ['0'-'9' 'a'-'f' 'A'-'F' '_']+          -> INT(int)             # from hex
-| ('+'|'-')?, "0o",
-    ['0'-'7' '_']+                          -> INT(int)             # from octal
-| ('+'|'-')?, "0b", ['0'-'1' '_']+          -> INT(int)             # from binary
+    ['0'-'9' 'a'-'f' 'A'-'F' '_']+          -> INT(int)             # hex
+| ('+'|'-')?, "0o", ['0'-'7' '_']+          -> INT(int)             # octal
+| ('+'|'-')?, "0b", ['0'-'1' '_']+          -> INT(int)             # binary
 
 (* float *)
-| "nan"                                     -> FLOAT(float)         # from nan
-| ('+'|'-')?, "inf"                         -> FLOAT(float)         # from inf
-| int, '.', ['0'-'9' '_'],
-    (('e'|'E'), int)?                       -> FLOAT(float)
-| int, (('e'|'E') int)                      -> FLOAT(float)
+| "nan"                                     -> FLOAT(float)         # nan
+| ('+'|'-')?, "inf"                         -> FLOAT(float)         # inf, +inf, -inf
+| ('+'|'-')?, digit+, '.', digit*, exp?     -> FLOAT(float)
 
 (* strings *)
 | '"' ("\\\"" | [^ '\n' '"' ])* '"'         -> STRING(string)       # additionally, handle escape sequences
 | "\"\"\"", (whitespace+, comment)?, '\n'
-    | whitespace{curr_ind} "\"\"\""         -> STRING(string)
-    | whitespace{curr_ind+2}
-        (s:[^ '\n']*) '\n'                  -> add s to string
-    | (s:[^ '\n']*) '\n'                    -> add s to string
-| "```", (whitespace+, comment)?, '\n'
-    | whitespace{curr_ind}, "```"           -> STRING(string)
-    | whitespace{curr_ind+2}, (s:[^ '\n']*) -> add s to string
-    | s:[^ '\n']*                           -> add s to string
+    | whitespace{curr_ind}, "\"\"\""        -> STRING(string[:-1])  # remove last '\n'
+    | s:[^ '\n']*, '\n'                     -> add (strip(s) + '\n') to string
+| "```", (whitespace+, comment?), '\n'
+    | whitespace{curr_ind}, "```"           -> STRING(string[:-1])  # remove last '\n'
+    | whitespace{curr_ind+2},
+        s:([^ '\n']*, '\n')                 -> add (s + '\n') to string
 
 comment = "# ", [^ '\n']*
 whitespace = ' '
+digit = ['0'-'9' '_']
+exp = 'e' ('+'|'-')? digit+
 ```
 
 ### Escape sequences
