only support uppercase letters in hex numbers

--- a/content/specifications/v0.2.0.md
+++ b/content/specifications/v0.2.0.md
@@ -555,8 +555,7 @@ simple_key = alpha ( alpha | digit | '_' | '-' )*;
 
 (* integers *)
 | ('+'|'-')?, digit+, exp?                  -> INT(int)             # decimal
-| ('+'|'-')?, "0x",
-    ['0'-'9' 'a'-'f' 'A'-'F' '_']+          -> INT(int)             # hex
+| ('+'|'-')?, "0x", ['0'-'9' 'A'-'F' '_']+  -> INT(int)             # hex
 | ('+'|'-')?, "0o", ['0'-'7' '_']+          -> INT(int)             # octal
 | ('+'|'-')?, "0b", ['0'-'1' '_']+          -> INT(int)             # binary
 
