read exponent as float and not int (for negative exp like 1e-10)

--- a/content/specifications/v0.2.0.md
+++ b/content/specifications/v0.2.0.md
@@ -553,16 +553,15 @@ simple_key = alpha ( alpha | digit | '_' | '-' )*;
 | "::" (whitespace*, comment)?, '\n'        -> [MULTILINE_VECTOR_START, NEWLINE]
 | ":: "                                     -> INLINE_VECTOR_START
 
-(* integers *)
-| ('+'|'-')?, digit+, exp?                  -> INT(int)             # decimal
+(* numbers: *)
+| ('+'|'-')?, digit+, ('.', digit+)?, exp   -> FLOAT(float)         # exponent (1e10, 6.022e23, ...)
+| ('+'|'-')?, digit+, '.', digit*           -> FLOAT(float)         # float (3.14, 1., ...)
+| ('+'|'-')?, digit+                        -> INT(int)             # integer
 | ('+'|'-')?, "0x", ['0'-'9' 'A'-'F' '_']+  -> INT(int)             # hex
 | ('+'|'-')?, "0o", ['0'-'7' '_']+          -> INT(int)             # octal
 | ('+'|'-')?, "0b", ['0'-'1' '_']+          -> INT(int)             # binary
-
-(* float *)
 | "nan"                                     -> FLOAT(float)         # nan
 | ('+'|'-')?, "inf"                         -> FLOAT(float)         # inf, +inf, -inf
-| ('+'|'-')?, digit+, '.', digit*, exp?     -> FLOAT(float)
 
 (* strings *)
 | '"' ("\\\"" | [^ '\n' '"' ])* '"'         -> STRING(string)       # additionally, handle escape sequences
